--- a/src/index.css
+++ b/src/index.css
@@ -91,13 +91,77 @@ p {
   color: #343a40;
 }
 
-
-
-
 .navbar-toggler {
-    background-color: #ffffff;
-    border-color: #ffffff;
+  background-color: #ffffff;
+  border-color: #ffffff;
+}
+
+.navbar-brand {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  margin-left: 75px;
+  margin-right: 120px;
+}
+
+@media (max-width: 800px) {
+  .navbar-brand {
+    margin-left: 0;
+    margin-right: 0;
   }
-  
+}
 
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.preloader-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #101c7c;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation-name: fadeInOut;
+  animation-duration: 0.9s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+/* 
+.preloader:before {
+  content: "";
+  position: absolute;
+  border: 4px solid #101c7c;
+  border-top: 4px solid transparent;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} */
