--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ font-family: 'Inter', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Raleway', sans-serif; 
 */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +22,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   font-family: "Raleway";
   text-align: center;
 }
@@ -56,9 +59,7 @@ p {
 
 /* Set the background color and text color of the nav */
 .custom-nav {
-  background-color: #f8f9fa;
   color: #343a40;
-  padding: 8px 15px;
   min-height: 75px;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.9);
@@ -145,23 +146,136 @@ p {
     opacity: 0;
   }
 }
-/* 
-.preloader:before {
-  content: "";
-  position: absolute;
-  border: 4px solid #101c7c;
-  border-top: 4px solid transparent;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 1s linear infinite;
-}
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
+
+/* Carousel Sections */
+
+.carouselImage{
+    height: auto;
+    max-height: 90vh;
+    padding: 2px;
+}
+.carousel {
+    margin-top: 2px;
+    margin-bottom: 5px;
   }
-  100% {
-    transform: rotate(360deg);
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: #101c7c;
+    height: 50px;
+    width: 50px;
+    outline: none;
+    margin-top: -25px;
+    display: none;
   }
-} */
+  
+  .carousel-control-prev-icon:before,
+  .carousel-control-next-icon:before {
+    display: inline-block;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+  }
+ 
+  .carousel-caption {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 80%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    margin-bottom: 3%;
+    text-align: center;
+    
+  }
+ 
+  @media (max-width: 800px) {
+    .carousel-caption p{
+        display: none;
+    }
+    .carousel-caption{
+        width: 95%;
+    }
+  }
+  
+  .carousel-caption h3,
+  .carousel-caption p {
+    color: #fff;
+    margin: 0;
+    padding: 5px;
+  }
+  
+  .carousel-caption h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  .carousel-caption p {
+    font-size: 20px;
+  }
+  
+
+
+  /* Custom fade transition */
+.carousel-fade .carousel-item {
+    opacity: 0;
+    transition-duration: 0.6s;
+    transition-property: opacity;
+  }
+  
+  .carousel-fade .carousel-item.active,
+  .carousel-fade .carousel-item-next.carousel-item-left,
+  .carousel-fade .carousel-item-prev.carousel-item-right {
+    opacity: 1;
+  }
+  
+  .carousel-fade .active.carousel-item-left,
+  .carousel-fade .active.carousel-item-right {
+    opacity: 0;
+  }
+  
+  .carousel-fade .carousel-item-next,
+  .carousel-fade .carousel-item-prev,
+  .carousel-fade .carousel-item.active,
+  .carousel-fade .active.carousel-item-left,
+  .carousel-fade .active.carousel-item-prev {
+    transform: translateX(0);
+  }
+  
+  .carousel-fade .carousel-item-next.carousel-item-left,
+  .carousel-fade .carousel-item-prev.carousel-item-right,
+  .carousel-fade .active.carousel-item-left,
+  .carousel-fade .active.carousel-item-prev {
+    transform: translateX(0);
+  }
+  
+  .carousel-fade .carousel-control-prev,
+  .carousel-fade .carousel-control-next {
+    z-index: 999;
+  }
+
+
+.hero {
+    width: 100%;
+    max-height: 90vh;
+    overflow: hidden;
+  }
+  
+
+  
+  @keyframes zoom {
+    from {
+      transform: scale(1, 1);
+    }
+    to {
+      transform: scale(1.5, 1.5);
+    }
+  }
+  
+  .carousel-inner .carousel-item > img {
+    -webkit-animation: zoom 20s;
+    animation: zoom 9s;
+  }
+  
