--- a/src/index.css
+++ b/src/index.css
@@ -274,7 +274,8 @@ p {
 /*==============ANTHEM / MP3 =====*/
 
 .mp3-player {
-  background-color: #202020;
+  background-color: #101c7c;
+  border: 2px solid #e9ecef;
   border-radius: 10px;
   padding: 20px;
   display: flex;
@@ -304,6 +305,7 @@ p {
 }
 
 .progress {
+  padding: 2px;
   width: 100%;
 }
 
@@ -331,3 +333,155 @@ p {
   height: 1px;
   overflow: hidden;
 }
+
+
+/*============ Programs Sections=========== */
+.col-md-3 {
+  padding: 15px;
+}
+
+.card {
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(16, 28, 124, 0.8);
+  transition: all 0.3s ease;
+  border: 1px solid #101c7c;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 98, 204, 0.9);
+  transform: translateY(-8px);
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.card-body {
+  padding: 5px;
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: bolder;
+  margin-bottom: 10px;
+}
+
+.card-text {
+  margin-bottom: 20px;
+  font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.read-more {
+  display: none;
+  margin-top: 20px;
+}
+
+.show {
+  display: block;
+}
+
+.btn {
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 8px 16px;
+  border-radius: 0;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0069d9;
+  border-color: #0062cc;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .col-md-3 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .col-md-3 {
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+}
+
+/* styles.css */
+.read-more-button {
+  color: #101c7c; /* White text */
+  margin: auto;
+  margin-left: 25%;
+  border: none; /* No border */
+  padding: 2px 4px; /* Some padding */
+  font-size: 16px; /* Set font size */
+  cursor: pointer; /* Change cursor on hover */
+  opacity: 0; /* Hide button by default */
+  animation: fade-inn 0.5s ease-in-out forwards; /* Add fade-in animation */
+}
+
+@keyframes fade-inn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/*===== More--- Buttons== */
+/* 
+.custom-button {
+  background-color: #101c7c;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+
+.custom-button:hover {
+  background-color: #0062cc;
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+}
+
+.custom-button:active {
+  transform: translateY(0);
+  box-shadow: none;
+} */
+
+
+
+
+
+
