--- a/src/index.css
+++ b/src/index.css
@@ -622,3 +622,98 @@ p {
 }
 
 
+/* Footer ========= */
+.span-or {
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 1px;
+  margin-left: -20px;
+  background-color: #fff;
+  width: 50px;
+  text-align: center;
+}
+.hr-or {
+  background-color: #cdcdcd;
+  height: 1px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+footer.nb-footer {
+  background: #222;
+  border-top: 2px solid #101c7c;
+}
+footer.nb-footer .footer-about {
+  margin: 0 auto;
+  margin-top: 15px;
+  max-width: 1170px;
+  text-align: center;
+}
+footer.nb-footer .footer-about p {
+  font-size: 14px;
+  color: #fff;
+  margin-top: 15px;
+}
+#osh{
+  font-size: 25px;
+  font-weight: 700;
+}
+footer.nb-footer .footer-about .social-media {
+  margin-top: 4px;
+}
+footer.nb-footer .footer-about .social-media ul li {
+  display: inline;
+  padding: 3px;
+}
+footer.nb-footer .footer-about .social-media ul li a {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  font-size: 17px;
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
+footer.nb-footer .footer-about .social-media ul li a:hover {
+  background: rgba(224, 218, 218, 0.4);
+  color: #fff;
+  border-color: rgba(224, 218, 218, 0.9);
+}
+footer.nb-footer .footer-info-single {
+  margin-top: 30px;
+}
+footer.nb-footer .footer-info-single .title {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 16px;
+  border-left: 4px solid #101c7c;
+  padding-left: 5px;
+  text-align: left;
+}
+footer.nb-footer .footer-info-single ul li a {
+  display: block;
+  color: #999;
+  padding: 2px 0;
+  text-decoration: none;
+  padding: 1px;
+}
+footer.nb-footer .footer-info-single ul li a:hover {
+  color: #fff;
+}
+footer.nb-footer .footer-info-single p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #999;
+}
+footer.nb-footer .copy-right {
+  margin-top: 15px;
+  background: #111;
+  padding: 7px 0;
+  color: #999;
+}
+footer.nb-footer .copy-right p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
