--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ p {
 p {
   font-family: "Raleway", sans-serif;
   text-align: justify;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 18px;
 }
 
@@ -982,3 +982,30 @@ figure.snip0069.hover figcaption:before {
   font-size: 60px; 
   color: #007bff; 
 }
+
+
+/* =========map.css========= */
+
+.map-container {
+  height: 450px;
+  width: 80%;
+  max-width: 100%;
+  margin: 0 auto;
+  margin-top: 20px;
+  border: 1px solid #007bff;
+  border-radius: 8px;
+  
+}
+@media (max-width: 800px) {
+  .map-container{
+    width:95%;
+    height: 370px;
+  }
+}
+
+.map-iframe {
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+}
+
